# Ohmimetro-V2

./: CMakeLists.txt  OhmimetroV2.c  README.md  diagram.json  wokwi.toml
lib/: font.h
